<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="main_activity_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="bacon_reader">BACON READER</string>
    <string name="capstone">CAPSTONE: MY  OWN APP</string>

    <string name="spotify_streamer_toast">This button will launch Spotify Streamer app!</string>
    <string name="scores_app_toast">This button will launch Scores app!</string>
    <string name="library_app_toast">This button will launch Library app!</string>
    <string name="build_it_bigger_toast">This button will launch Build It Bigger app!</string>
    <string name="bacon_reader_toast">This button will launch Bacon Reader app!</string>
    <string name="capstone_toast">This button will launch my Capstone app!</string>

</resources>
