<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/main_activity_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black" />
            <Button
                android:id="@+id/btn_spotify_streamer"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/spotify_streamer"
                android:background="@drawable/btn"
                android:layout_marginBottom="@dimen/btn_margin_bottom"/>

            <Button
                android:id="@+id/btn_scores_app"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/scores_app"
                android:background="@drawable/btn"
                android:layout_marginBottom="@dimen/btn_margin_bottom"/>

            <Button
                android:id="@+id/btn_library_app"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/library_app"
                android:background="@drawable/btn"
                android:layout_marginBottom="@dimen/btn_margin_bottom"/>

            <Button
                android:id="@+id/btn_build_it_bigger"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/build_it_bigger"
                android:background="@drawable/btn"
                android:layout_marginBottom="@dimen/btn_margin_bottom"/>

            <Button
                android:id="@+id/btn_bacon_reader"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/bacon_reader"
                android:background="@drawable/btn"
                android:layout_marginBottom="@dimen/btn_margin_bottom" />

            <Button
                android:id="@+id/btn_capstone"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/capstone"
                android:background="@drawable/btn_capstone"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                />

</LinearLayout>
